# drogon-examples

./: LICENSE  README.md
drogon-scylladb-crud-basic/: .gitignore  CMakeLists.txt  README.md  initialize-and-build-linux.sh  thunder_client-collection-drogon-_scylladb_crud_basic.json
drogon-scylladb-crud-basic/cmake/: project-00-setup.cmake  project-01-packages.cmake  project-02-subdirs.cmake
drogon-scylladb-crud-basic/configs/json/: backend.api.json
drogon-scylladb-crud-basic/docs/: database-design.md  url-endpoint-api.md
drogon-scylladb-crud-basic/src/backend/backend_api/: CMakeLists.txt
drogon-scylladb-crud-basic/src/backend/backend_api/src/backend_api/: main.cc  main.h
drogon-scylladb-crud-basic/src/backend/backend_api/src/backend_api/controllers/: ctl_account.cc  ctl_account.h  ctl_stash.cc  ctl_stash.h
drogon-scylladb-crud-basic/src/backend/backend_api/src/backend_api/plugins/: core_plugin.cc  core_plugin.h
drogon-scylladb-crud-basic/src/db/drogon_scylladb_crud_basic/: CMakeLists.txt
drogon-scylladb-crud-basic/src/db/drogon_scylladb_crud_basic/src/drogon_scylladb_crud_basic/: coredb.cc  coredb.h
drogon-scylladb-crud-basic/src/db/drogon_scylladb_crud_basic/src/drogon_scylladb_crud_basic/interfaces/: idrogon_scylladb.cc  idrogon_scylladb.h
drogon-scylladb-crud-basic/src/db/drogon_scylladb_crud_basic/src/drogon_scylladb_crud_basic/tables/: account.cc  account.h  stash.cc  stash.h
drogon-scylladb-crud-basic/src/db/drogon_scylladb_crud_basic/src/drogon_scylladb_crud_basic/types/: account_types.h  auth_types.h  stash_types.h
